--- a/style.css
+++ b/style.css
@@ -8,15 +8,17 @@
 .slot{
     width: 32.2%;
     height: 99px;
-    line-height: 99px;
-    text-align: center;
     background-color: #3498DB;
     display: inline-block;
     margin: 0px;
+    border-radius: 8px;
+    line-height: 99px;
+    text-align: center;
     color: white;
     font-size: 1em;
-    border-radius: 8px;
+    vertical-align: middle;
 }
+
 
 .slot a{
     color:white;
@@ -49,4 +51,11 @@
 .button1:hover {
     background-color: white;
     color: black;
+}
+
+
+span{
+    height: 20px;
+    line-height: 20px;
+    display: inline-block;
 }
